# home-assistant-speedtest-watchdog

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  config.sample.json  pyproject.toml
bdp/homeassistant/speedtestwatchdog/: __main__.py  config.schema.json  connections.py  monitors.py  reloader.py
tools/: config.schema.json
watchdog/: __main__.py  connections.py  integration_reloader.py  monitors.py  reloader.py  sensor_monitor.py
